--- a/bhoma/apps/patient/templates/patient/single_patient.html
+++ b/bhoma/apps/patient/templates/patient/single_patient.html
@@ -1,5 +1,10 @@
 {% extends "layout.html" %}
 {% block content %}
 <h3>{{ patient.first_name }} {{ patient.last_name }}</h3>
+<ul>
+{% for type in types %}
+    <li><a href="{% url xform_play type.type.xform.id %}?patient_id={{ patient.get_id }}&redirect_url={% url single_patient patient.get_id %}">+ new {{ type.type.name }}</a></li>
+{% endfor %}
+</ul>
 {% include "encounter/partials/encounter_list.html" %} 
 {% endblock %}
