--- a/bhoma/apps/patient/templates/patient/single_patient.html
+++ b/bhoma/apps/patient/templates/patient/single_patient.html
@@ -6,5 +6,16 @@
     <li><a href="{% url xform_play type.type.xform.id %}?patient_id={{ patient.get_id }}&redirect_url={% url single_patient patient.get_id %}">+ new {{ type.type.name }}</a></li>
 {% endfor %}
 </ul>
+{% for xform in xforms %}
+    {% if forloop.first %}
+<h3>Linked Data</h3>
+<ul>
+    {% endif %}
+    <li><a href="http://localhost:5984/_utils/document.html?patient/{{xform.get_id}}">{{ xform.type }}</a> ({{ xform.namespace }})</li>
+    {% if forloop.last %} 
+</ul>
+    {% endif %}
+{% endfor %}
+
 {% include "encounter/partials/encounter_list.html" %} 
 {% endblock %}
