--- a/bhoma/apps/xforms/templates/xforms/xform_player.html
+++ b/bhoma/apps/xforms/templates/xforms/xform_player.html
@@ -145,13 +145,30 @@ function prevQuestion () {
   }, "json");
 }
 
+function post_to_url(path, params, method) {
+    // hat tip: http://stackoverflow.com/questions/133925/javascript-post-request-like-a-form-submit
+    method = method || "post"; // Set method to post by default, if not specified.
+    // The rest of this code assumes you are not using a library.
+    // It can be made less wordy if you use one.
+    
+    var form = document.createElement("form");
+    form.setAttribute("method", method);
+    form.setAttribute("action", path);
+
+    for(var key in params) {
+        var hiddenField = document.createElement("input");
+        hiddenField.setAttribute("type", "hidden");
+        hiddenField.setAttribute("name", key);
+        hiddenField.setAttribute("value", params[key]);
+
+        form.appendChild(hiddenField);
+    }
+
+    form.submit();
+}
 function formComplete (event) {
-  $("start").style.display = 'block';
-  $("question").style.display = 'none';
-  $("done").style.display = 'block';
-  
-  $("save-inst").textContent = event["save-id"];
-  $("form-xml").textContent = event["output"];
+    // POST the response back to ourselves for further processing
+    post_to_url("", event)
 }
 
 </script>
