--- a/bhoma/apps/patient/templates/patient/single_patient.html
+++ b/bhoma/apps/patient/templates/patient/single_patient.html
@@ -17,5 +17,6 @@
     {% endif %}
 {% endfor %}
 
-{% include "encounter/partials/encounter_list.html" %} 
+{% include "encounter/partials/encounter_list.html" %}
+<a href="{% url sofa patient.get_id %}">view in sofa</a> 
 {% endblock %}
