Change patient clinic_id to a list of clinic_ids since patients can appear at more than one clinic.  Updated synchronization code to handle this case

--- a/bhoma/apps/patient/templates/patient/partials/patient_list.html
+++ b/bhoma/apps/patient/templates/patient/partials/patient_list.html
@@ -15,7 +15,7 @@
 		<td>{{ patient.last_name }}</td>
         <td>{{ patient.gender }}</td>
 		<td>{{ patient.birthdate }}</td>
-		<td>{{ patient.clinic_id }}</td>
+		<td>{{ patient.clinic_ids|join:", " }}</td>
 	</tr>
 {% empty %} 
     <tr>Sorry, no patients here.</tr>
