--- a/bhoma/apps/xforms/templates/xforms/xform_player.html
+++ b/bhoma/apps/xforms/templates/xforms/xform_player.html
@@ -30,10 +30,13 @@ function loadForm (formName) {
   $("start").style.display = 'none';
   $("question").style.display = 'block';
   $("done").style.display = 'none';
-  jQuery.post(XFORM_URL, JSON.stringify({'action': 'new-form', 'form-name': formName}), function (resp) {
-    gSessionID = resp["session_id"];
-    renderEvent(resp["event"], true);
-  }, "json");
+  jQuery.post(XFORM_URL, 
+              JSON.stringify({'action': 'new-form', 
+                              'form-name': formName,
+                              'preloader-data': {{ preloader_data|safe }} }), 
+              function (resp) { gSessionID = resp["session_id"];
+                                renderEvent(resp["event"], true);
+                              }, "json");
 }
 
 function renderEvent (event, dirForward) {
