--- a/bhoma/apps/xforms/templates/xforms/touchscreen.html
+++ b/bhoma/apps/xforms/templates/xforms/touchscreen.html
@@ -2,11 +2,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-    <script language="javascript" type="text/javascript" src="layout.js"></script>   
-    <script language="javascript" type="text/javascript" src="touchscreen-ui.js"></script>   
-    <script src="jquery-1.4.2.min.js"></script>
-    
+    <script language="javascript" type="text/javascript" src="{{MEDIA_URL}}webapp/javascripts/layout.js"></script>   
+    <script language="javascript" type="text/javascript" src="{{MEDIA_URL}}webapp/javascripts/touchscreen-ui.js"></script>   
+    <script language="javascript" type="text/javascript" src="{{MEDIA_URL}}webapp/javascripts/formnav.js"></script>   
+    <script language="javascript" type="text/javascript" src="{{MEDIA_URL}}webapp/javascripts/jquery-1.4.2.min.js"></script>
   </head>
+
+  XFORM_URL = "{% url xform_player_proxy %}"
+  {{xform.name}}
+  {{xform.file.path}}
 
   <body id="body" onLoad="initStaticWidgets(); render_clean();" style="cursor: crosshair; overflow: hidden; font-family: sans-serif; font-size: xx-large;" oncontextmenu="return false;">
     <div id="viewport" style="-moz-user-select: -moz-none; position: absolute; left: 0px; top: 50px; width: 1024px; height: 768px; background-color: red; margin: 15px;"></div>
