layout adjustments for switching to ubuntu firefox

--- a/bhoma/apps/xforms/templates/xforms/touchscreen.html
+++ b/bhoma/apps/xforms/templates/xforms/touchscreen.html
@@ -30,8 +30,7 @@ function init () {
   <body id="body" onLoad="init();" style="
     cursor: crosshair; /* change cursor */
     overflow: hidden;  /* disable scrolling */
-    font-family: 
-    sans-serif; 
+    font-family: sans-serif; 
     font-size: xx-large;"
     oncontextmenu="return false;"> <!-- disable right-click -->
     <div id="viewport" style="
