--- a/bhoma/apps/xforms/templates/xforms/touchscreen.html
+++ b/bhoma/apps/xforms/templates/xforms/touchscreen.html
@@ -45,7 +45,7 @@ function init () {
     </div>
     
     <!-- an off-screen area to temporarily dump text and play with text sizing -->
-    <div id="staging" style="position: absolute; left: 0px; top: 1000px; width: 1500px; height: 1500px; background-color: #ddd;">
+    <div id="staging" style="position: absolute; left: 0px; top: 1000px; width: 1500px; height: 1500px; background-color: #ddd; font-weight: bold;">
       <span id="snippet"></span>
     </div>
     
