--- a/bhoma/apps/xforms/templates/xforms/touchscreen.html
+++ b/bhoma/apps/xforms/templates/xforms/touchscreen.html
@@ -56,7 +56,7 @@ function init () {
     <button onClick="questionEntry.update(freeEntry); answerBar.update(freeTextAnswer); freeEntryKeyboard.update(keyboard);">text entry</button>
     <button onClick="questionEntry.update(choiceSelect(['Male', 'Female'], []));">multiple choice</button>
     <button onClick="questionEntry.update(freeEntry); answerBar.update(dateAnswer); freeEntryKeyboard.update(decadeChoices);">date: year 1/2</button>
-    <button onClick="questionEntry.update(freeEntry); answerBar.update(dateAnswer); freeEntryKeyboard.update(yearSelect(1990));">date: year 2/2</button>
+    <button onClick="questionEntry.update(freeEntry); answerBar.update(dateAnswer); freeEntryKeyboard.update(yearSelect(2000, 2010));">date: year 2/2</button>
     <button onClick="questionEntry.update(freeEntry); answerBar.update(dateAnswer); freeEntryKeyboard.update(monthChoices);">date: month</button>
     <button onClick="questionEntry.update(freeEntry); answerBar.update(dateAnswer); freeEntryKeyboard.update(daySelect(29));">date: day</button>
     <button onclick="overlay.setActive(true);">overlay</button>
