add basic preloader support from django side.

--- a/bhoma/apps/xforms/templates/xforms/touchscreen.html
+++ b/bhoma/apps/xforms/templates/xforms/touchscreen.html
@@ -20,7 +20,7 @@ function init () {
 
   initStaticWidgets();
   render_clean();
-  loadForm(XFORM_UID);
+  loadForm(XFORM_UID, {{ preloader_data|safe }});
 }
 
     </script>
