fix typo when there's no xforms

--- a/bhoma/apps/xforms/templates/xforms/xform_list.html
+++ b/bhoma/apps/xforms/templates/xforms/xform_list.html
@@ -23,7 +23,7 @@
 		<td><a href="{% url xform_play xform.id %}">fill out</a></td>
 	</tr>
 {% empty %} 
-    <tr>Sorry, no patients here.</tr>
+    <tr>Sorry, no forms here.</tr>
 {% endfor %} 
 
 <tr></tr>
