--- a/bhoma/apps/patient/templates/patient/single_patient.html
+++ b/bhoma/apps/patient/templates/patient/single_patient.html
@@ -1,6 +1,16 @@
 {% extends "layout.html" %}
 {% block content %}
 <h3>{{ patient.first_name }} {{ patient.last_name }}</h3>
+<div id="patient-summary" class="span-24">
+    <ul>
+        <li>ID: {{ patient.patient_id }}</li>
+        <li>Gender: {{ patient.gender }}</li>
+        <li>Date of Birth: {{ patient.birthdate|date:"d, M Y" }}</li>
+        <li>Village: {{ patient.village }}</li>
+        <li>CHW: {{ patient.chw }}</li>
+    </ul>
+</div>
+<h3>Enter New Data</h3>
 <ul>
 {% for slug, type in encounter_types.items %}
     <li><a href="{% url new_patient_encounter patient.get_id slug %}">+ new {{ type.name }}</a></li>
@@ -16,6 +26,7 @@
 </ul>
     {% endif %}
 {% endfor %}
+<h3>Recent Encounters</h3>
 {% include "encounter/partials/encounter_list.html" %}
 
 <a href="{% url sofa patient.get_id %}">view in sofa</a> 
