--- a/bhoma/apps/patient/templates/patient/single_patient.html
+++ b/bhoma/apps/patient/templates/patient/single_patient.html
@@ -21,7 +21,7 @@
 <h3>Linked Data</h3>
 <ul>
     {% endif %}
-    <li><a href="http://localhost:5984/_utils/document.html?patient/{{xform.get_id}}">{{ xform.type }}</a> ({{ xform.namespace }})</li>
+    <li><a href="{% url sofa xform.get_id %}">{{ xform.type }}</a> ({{ xform.namespace }})</li>
     {% if forloop.last %} 
 </ul>
     {% endif %}
