add couch link to enocunter list.  add appropriate preloaders for meta block

--- a/bhoma/apps/encounter/templates/encounter/partials/encounter_list.html
+++ b/bhoma/apps/encounter/templates/encounter/partials/encounter_list.html
@@ -10,7 +10,7 @@
         <tbody>
     {% endif %}
         <tr>
-            <td>{{ encounter.visit_date|date:"d, M Y"|default:"No date found" }}</td>
+            <td><a href="{% url sofa encounter.xform_id %}">{{ encounter.visit_date|date:"d M Y"|default:"No date found" }}</a></td>
             <td>{{ encounter.type }}</td>
             <td>TODO: Case Outcome?</td>
         </tr>
