refactoring form ui navigation to be able to hook up to arbitrary form engines

--- a/bhoma/apps/xforms/templates/xforms/touchscreen.html
+++ b/bhoma/apps/xforms/templates/xforms/touchscreen.html
@@ -20,7 +20,11 @@ function init () {
 
   initStaticWidgets();
   render_clean();
-  loadForm(XFORM_UID, {{ preloader_data|safe }});
+
+  gFormAdapter = new xformAjaxAdapter(XFORM_UID, {{ preloader_data|safe }});
+
+
+  gFormAdapter.loadForm();
 }
 
     </script>
