--- a/bhoma/apps/patient/templates/patient/choose_encounter_touchscreen.html
+++ b/bhoma/apps/patient/templates/patient/choose_encounter_touchscreen.html
@@ -3,10 +3,10 @@
 {{ patient.first_name }} {{ patient.last_name }} ({{ patient.patient_id|default:"UNKNOWN ID" }})
 {% endblock %}
 {% block touchscreen_content %}
-<h3>Choose an Encounter Type</h3>
+<h3>Choose a Form Type</h3>
 <center>
 {% for slug, type in encounter_types.items %}
-    <div id="{{slug}}-button" class="encounter-button" onclick="location.href='{% url new_patient_encounter patient.get_id slug %}'">
+    <div id="{{slug}}-button" class="big-button" onclick="location.href='{% url new_patient_encounter patient.get_id slug %}'">
         <table border="0" cellpadding="0" cellspacing="0" height="100%" width="100%">
             <tbody>
                 <tr>
@@ -18,5 +18,5 @@
 {% endfor %}
 </center>
 <!-- TODO: remove debug -->
-<a href="{% url sofa patient.get_id %}">view in sofa</a> 
+<a href="{% url sofa patient.get_id %}">view in sofa (DEBUG)</a> 
 {% endblock %}
