--- a/bhoma/apps/patient/templates/patient/single_patient_touchscreen.html
+++ b/bhoma/apps/patient/templates/patient/single_patient_touchscreen.html
@@ -25,5 +25,5 @@
 <h3>Recent Encounters</h3>
 {% include "encounter/partials/encounter_list.html" %}
 
-<a href="{% url sofa patient.get_id %}">view in sofa</a> 
+<a href="{% url sofa patient.get_id %}">view in sofa (DEBUG)</a> 
 {% endblock %}
