--- a/bhoma/apps/webapp/templates/landing_page.html
+++ b/bhoma/apps/webapp/templates/landing_page.html
@@ -1,13 +1,27 @@
-{% extends "layout.html" %}
-{% block content %}
-<span style="text-align:center">
-<div class="span-24">
-    <h2>Main Menu</h2>
+{% extends "touchscreen/wrapper-raw.html" %}
+{% block header %}
+BHOMA Main Menu
+{% endblock %}
+{% block touchscreen_content %}
+<h3>What would you like to do?</h3>
+<center>
+<div class="really-big-button" onclick="location.href='{% url patient_search %}'">
+	<table border="0" cellpadding="0" cellspacing="0" height="100%" width="100%">
+	    <tbody>
+	        <tr>
+	            <td align="center" valign="middle">Enter Data</td>
+	        </tr>
+	    </tbody>
+	</table>
 </div>
-<div class="span-12">
-    <h3><a href="{% url patient_search %}">Enter Data</a></h3>
+<div class="really-big-button" onclick="location.href='{% url report_list %}'">
+    <table border="0" cellpadding="0" cellspacing="0" height="100%" width="100%">
+        <tbody>
+            <tr>
+                <td align="center" valign="middle">View Reports</td>
+            </tr>
+        </tbody>
+    </table>
 </div>
-<div class="span-12 last">
-    <h3><a href="{% url report_list %}">View Reports</a></div></h3>
-</span>
+</center>
 {% endblock %}
