--- a/bhoma/apps/chw/templates/chw/chw_list.html
+++ b/bhoma/apps/chw/templates/chw/chw_list.html
@@ -3,7 +3,7 @@
 <h3>Community Health Workers</h3>
 <ul>
 {% for chw in chws %}
-	<li>{{ chw.first_name }} {{ chw.last_name }} @ {{ chw.clinics|join:", " }}
+	<li>{{ chw.first_name }} {{ chw.last_name }} @ {{ chw.clinic_ids|join:", " }}
 	    <a href="{% url sofa chw.get_id %}">view in sofa (DEBUG)</a>
 	</li>
 {% endfor %}
