--- a/bhoma/apps/webapp/templates/landing_page.html
+++ b/bhoma/apps/webapp/templates/landing_page.html
@@ -5,7 +5,7 @@ BHOMA Main Menu
 {% block touchscreen_content %}
 <h3>What would you like to do?</h3>
 <center>
-<div class="really-big-button" onclick="location.href='{% url patient_search %}'">
+<div class="really-big-button" onclick="location.href='{% url patient_select %}'">
 	<table border="0" cellpadding="0" cellspacing="0" height="100%" width="100%">
 	    <tbody>
 	        <tr>
