enable auto-advance

--- a/bhoma/apps/xforms/templates/xforms/touchscreen.html
+++ b/bhoma/apps/xforms/templates/xforms/touchscreen.html
@@ -18,6 +18,8 @@ XFORM_URL = "{% url xform_player_proxy %}";
 XFORM_NAME = "{{form.name}}";
 XFORM_UID = null;
 
+autoAdvance = true;
+
 function init () {
 
   initStaticWidgets();
