--- a/bhoma/apps/patient/templates/patient/single_patient_touchscreen.html
+++ b/bhoma/apps/patient/templates/patient/single_patient_touchscreen.html
@@ -1,17 +1,13 @@
 {% extends "touchscreen/wrapper-raw.html" %}
+{% block page_head %}
+{% endblock %}
 {% block header %}
 {{ patient.first_name }} {{ patient.last_name }} ({{ patient.patient_id|default:"UNKNOWN ID" }})
 {% endblock %}
 {% block touchscreen_content %}
-<div id="patient-summary" class="span-24">
-    <ul>
-        <li>ID: {{ patient.patient_id }}</li>
-        <li>Gender: {{ patient.gender }}</li>
-        <li>Date of Birth: {{ patient.birthdate|date:"d, M Y" }}</li>
-        <li>Village: {{ patient.address.village }}</li>
-        <li>CHW Zone: {{ patient.address.zone }}</li>
-    </ul>
-</div>
+<div class="container" style="font-size: 50%;">
+<div id="patient-summary" class="span-13">
+{% include "patient/partials/single_patient_summary.html" %}
 {% for xform in xforms %}
     {% if forloop.first %}
 <h3>Linked Data</h3>
@@ -24,6 +20,12 @@
 {% endfor %}
 <h3>Recent Encounters</h3>
 {% include "encounter/partials/encounter_list.html" %}
-
+</div>
+<div class="span-10 last">
+{% include "patient/partials/encounter_choice_list.html" %}
 <a href="{% url sofa patient.get_id %}">view in sofa (DEBUG)</a> 
+</div>
+</div>
+
+
 {% endblock %}
