--- a/bhoma/apps/webapp/templates/touchscreen/wrapper-raw.html
+++ b/bhoma/apps/webapp/templates/touchscreen/wrapper-raw.html
@@ -1,7 +1,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+    <link rel="stylesheet" href="{{MEDIA_URL}}webapp/stylesheets/blueprint/screen.css" type="text/css" media="screen, projection">
     <link rel="stylesheet" href="{{MEDIA_URL}}webapp/stylesheets/touchscreen.css" type="text/css" >
+{% block page_head %}{% endblock %}    
   </head>
 <body>
     <!-- disable right-click -->
@@ -24,7 +26,7 @@
                             </tbody>
                         </table>
                     </div>
-                    <div id="help-button">
+                    <div id="help-button" class="footer-button">
                         <table border="0" cellpadding="0" cellspacing="0" height="100%" width="100%">
                             <tbody>
                                 <tr>
