Changing text: recent encounters -> recent visits

--- a/bhoma/apps/patient/templates/patient/single_patient_touchscreen.html
+++ b/bhoma/apps/patient/templates/patient/single_patient_touchscreen.html
@@ -18,7 +18,7 @@
 </ul>
     {% endif %}
 {% endfor %}
-<h3>Recent Encounters</h3>
+<h3>Recent Visits</h3>
 {% include "encounter/partials/encounter_list.html" %}
 </div>
 <div class="span-10 last">
