--- a/bhoma/apps/reports/templates/reports/report_list.html
+++ b/bhoma/apps/reports/templates/reports/report_list.html
@@ -14,7 +14,7 @@
     <ul>
         <li><a href="#">Adult PI Report (TODO)</a></li>
         <li><a href="#">Pregnancy PI Report (TODO)</a></li>
-        <li><a href="#">Under-Five PI Report (TODO)</a></li>
+        <li><a href="{% url under_five_pi %}">Under-Five PI Report</a></li>
         <li><a href="#">CHW PI Report (TODO)</a></li>
     </ul>
 </div>
