--- a/bhoma/apps/reports/templates/reports/pi/adult.html
+++ b/bhoma/apps/reports/templates/reports/pi/adult.html
@@ -5,17 +5,11 @@
     <thead>
         <th>Clinic</th>
         <th>Period</th>
-        <th>Ht & Wt</th>
-        <th>Vitals</th>
+        <th>BP Rcrd</th>
+        <th>Tb Mgmt</th>
+        <th>Malaria Mgmt</th>
         <th>HIV Test</th>
-        <th>Wt/Age</th>
-        <th>Low Wt</th>
-        <th>Fever Mgmt</th>
-        <th>Diarrhea Mgmt</th>
-        <th>RTI Mgmt</th>
-        <th>Hb if Pallor</th>
-        <th>Follow Up</th>
-        <th>Outcome Rcrd</th>
+        <th>Drugs</th>
     </thead>
     <tbody>
 {% for row in data %}
@@ -23,17 +17,11 @@
         <tr>
             <td>{{ key.0 }}</td>
             <td>{% js_int_to_month key.2 %} {{ key.1 }}</td>
-            <td>{{ value.ht_wt_rec }}</td>
-            <td>{{ value.vitals_rec }}</td>
-            <td>{{ value.hiv_test_ordered }}</td>
-            <td>{{ value.weight_assessed }}</td>
-            <td>{{ value.low_weight_managed }}</td>
-            <td>{{ value.fever_managed }}</td>
-            <td>{{ value.diarrhea_managed }}</td>
-            <td>{{ value.rti_managed }}</td>
-            <td>{{ value.hb_if_pallor }}</td>
-            <td>{{ value.followup_recorded }}</td>
-            <td>{{ value.outcome_recorded }}</td>
+            <td>{{ value.bp_recorded }} / {{ value.total }}</td>
+            <td>{{ value.tb_managed_num }} / {{ value.tb_managed_num }}</td>
+            <td>todo / {{ value.fever_present }}</td>
+            <td>{{ value.did_test_hiv }} / {{ value.should_test_hiv }}</td>
+            <td>todo</td>
         </tr>
 {% endwith %}{% endwith %}
 {% endfor %}
