Fix text: date --> month

--- a/bhoma/apps/reports/templates/reports/report_base.html
+++ b/bhoma/apps/reports/templates/reports/report_base.html
@@ -31,7 +31,7 @@
 {% if show_dates %}
 <form method="get">
     <p>Start Month: <input type="text" id="startdate" name="startdate" class="date-picker">
-       End Date: <input type="text" id="enddate" name="enddate" class="date-picker">
+       End Month: <input type="text" id="enddate" name="enddate" class="date-picker">
        <input type="submit" value="Go!" />
     </p>
 </form>
